separate integration tests (#2694)
* separate integration tests